[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/interface/fonts/Abaddon Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/interface/hud/HUD.gd" type="Script" id=2]
[ext_resource path="res://game/images/characters.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 139, 65, 2, 2 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 38, 13, 1, 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HeartContainer" type="HBoxContainer" parent="."]
margin_top = 16.037
margin_right = 57.0
margin_bottom = 16.037
custom_constants/separation = -2

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 169.0
margin_right = 202.0
margin_bottom = 18.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "000"
align = 2

[node name="DebuffLabel" type="Label" parent="."]
margin_left = 10.3758
margin_top = 239.661
margin_right = 50.3758
margin_bottom = 253.661
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboBar" type="TextureProgress" parent="."]
margin_left = 101.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 9.0
max_value = 10.0
value = 10.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )
nine_patch_stretch = true

[node name="ComboTimer" type="Timer" parent="ComboBar"]
one_shot = true

[connection signal="timeout" from="ComboBar/ComboTimer" to="." method="_on_ComboTimer_timeout"]
